attempt to fix fontawesome on iOS

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -137,6 +137,8 @@ img {
   width: 100%;
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) { @font-face { font-family:'FontAwesome'; src: url('fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular') format('svg'); } }
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
